--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
     sqflite: ^2.0.0+4
     just_audio: ^0.9.14
     intl: ^0.17.0
+    just_audio_background: ^0.0.1-beta.1
+    rxdart: ^0.27.2
 
 dev_dependencies:
     flutter_test:
