--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
     intl: ^0.17.0
     just_audio_background: ^0.0.1-beta.1
     rxdart: ^0.27.2
+    dio: ^4.0.1
+    permission_handler: ^8.2.5
 
 dev_dependencies:
     flutter_test:
