--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
     rxdart: ^0.27.2
     dio: ^4.0.1
     permission_handler: ^8.2.5
+    xml: ^5.3.1
 
 dev_dependencies:
     flutter_test:
