--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
     dio: ^4.0.1
     permission_handler: ^8.2.5
     xml: ^5.3.1
+    cached_network_image: ^3.1.0+1
 
 dev_dependencies:
     flutter_test:
