--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
     permission_handler: ^8.2.5
     xml: ^5.3.1
     cached_network_image: ^3.1.0+1
+    shared_preferences: ^2.0.8
+    flutter_slidable: ^0.6.0
 
 dev_dependencies:
     flutter_test:
@@ -68,7 +70,7 @@ flutter:
 
     # To add assets to your application, add an assets section, like this:
     assets:
-        - assets/images/p1.jpg
+        - assets/images/
     #   - images/a_dot_ham.jpeg
 
     # An image asset can refer to one or more resolution-specific "variants", see
