--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,11 @@ dependencies:
     flutter_slidable: ^0.6.0
 
 dev_dependencies:
+    flutter_launcher_icons: '^0.9.2'
+flutter_icons:
+    android: 'launcher_icon'
+    ios: false
+    image_path: 'assets/images/pod.jpg'
     flutter_test:
         sdk: flutter
 
