--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
     cached_network_image: ^3.1.0+1
     shared_preferences: ^2.0.8
     flutter_slidable: ^0.6.0
+    connectivity_plus: ^2.0.2
 
 dev_dependencies:
     flutter_lints: ^1.0.4
